# memoria

./: .coveragerc  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  conftest.py  embedder.py  pyproject.toml  pytest.ini  pytest_asyncio.py  pytest_benchmark.py  pytest_cov.py  requirements.txt  requirements_dev.txt  sitecustomize.py  unified_memory.py  usercustomize.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  test.yml
_pytest_plugins/: __init__.py
aiosqlite/: __init__.py
bench/: __init__.py  dialogue.py  faiss_hnsw.py
cryptography/: __init__.py
docs/: agent_integration.md  aiosqlite_fork.md  architecture.md  attention_strategies.md  backup_restore.md  cross_encoder.md  deployment.md  development.md  faiss_performance.md  index.md  monitoring.md  qdrant_setup.md  vector_store_plugins.md
faiss/: __init__.py
fastapi/: __init__.py  testclient.py
httpx/: __init__.py
hypothesis/: __init__.py  strategies.py
load_tests/: high_volume.py  locustfile.py
ltm_bench/: __init__.py  metrics.py  test_runner.py
ltm_bench/scenario/: __init__.py  synthetic.py
memory_system/: __init__.py  cli.py  context.py  graph_rag.py  memory_helpers.py  rag_router.py  router.py  sensory_buffer.py  skills.py  unified_memory.py  working_memory.py
memory_system/_vendor/aiosqlite/: __init__.py
memory_system/_vendor/sentence_transformers/: __init__.py
memory_system/adapter/: __init__.py  reranker.py
memory_system/agent/: __init__.py  planner.py  resolver.py
memory_system/api/: __init__.py  app.py  dependencies.py  middleware.py  schemas.py  utils.py
memory_system/api/routes/: __init__.py  admin.py  auth.py  health.py  memory.py
memory_system/config/: __init__.py  settings.py
memory_system/core/: __init__.py  _faiss_hnsw_fallback.py  _faiss_hnsw_real.py  _faiss_mod.py  bandit.py  cross_reranker.py  dedup.py  duckdb_store.py  embedding.py  enhanced_store.py  event_log.py  factify.py  faiss_vector_store.py  hierarchical_summarizer.py  index.py  interfaces.py  keyword_attention.py  maintenance.py  memory_dynamics.py  milvus_store.py  mmr.py  postgres_store.py  qdrant_store.py  redis_store.py  scheduler.py  sqlite_vec_store.py  store.py  summarization.py  top_n_by_score_sql.py  vector_store.py  weaviate_store.py
memory_system/settings/: __init__.py  base.py  core.py  database.py  performance.py  security.py
memory_system/utils/: __init__.py  afile.py  blake.py  cache.py  cases.py  dependencies.py  exceptions.py  http.py  kms_aws.py  knn_lm.py  logging.py  loop.py  metrics.py  numpy.py  pydantic_compat.py  rwlock.py  security.py
monitoring/: alerts.yaml
prometheus_client/: __init__.py
pytest_asino/: _init_.py
pytest_benchmark/: __init__.py  fixture.py
schemathesis/: __init__.py
scripts/: bench_search.py  export_openapi.py  maintenance.py  profile_memory.py  reembed_vectors.py  run_gunicorn.sh  secure_entry.py  train_preference_reranker.py
stubs/argon2/: __init__.py  exceptions.py  low_level.py
stubs/numpy/: __init__.py
stubs/numpy/random/: __init__.py  mtrand.py
stubs/prometheus_client/: __init__.pyi
stubs/typer/: __init__.py  __init__.pyi
tests/: README  __init__.py  conftest.py  st_api_fuzz.yaml  synthetic_dataset.py  test_access_frequency.py  test_afile_fallback.py  test_api.py  test_api_edge_cases.py  test_api_fuzz.py  test_api_hypothesis.py  test_api_performance.py  test_async_plugin.py  test_async_race_conditions.py  test_attention.py  test_bandit.py  test_benchmark_regression.py  test_benchmark_thresholds.py  test_blake_import.py  test_cache_purge_property.py  test_card_summarization.py  test_case_base.py  test_cli.py  test_codspeed_insert_search.py  test_composite_scorer_properties.py  test_config.py  test_content_hash.py  test_core.py  test_cross_reranker.py  test_cross_reranker_quality.py  test_db_invariants.py  test_decay_law_config.py  test_dedup_simhash.py  test_dependency_thread_safety.py  test_docstrings.py  test_duckdb_search.py  test_e2e_fastapi.py  test_e2e_snapshot.py  test_edge_cases.py  test_ef_search_persistence.py  (+113 more)
tests/_stubs/apscheduler/: __init__.py
tests/_stubs/apscheduler/schedulers/: __init__.py  asyncio.py
tests/_stubs/blake3/: __init__.py
tests/_stubs/cryptography/: __init__.py  fernet.py
tests/_stubs/faiss/: __init__.py
tests/_stubs/fastapi/: __init__.py  routing.py  testclient.py
tests/_stubs/fastapi/middleware/: __init__.py  cors.py
tests/_stubs/fastapi/openapi/: __init__.py  utils.py
tests/_stubs/httpx/: __init__.py
tests/_stubs/numpy/: __init__.py  typing.py
tests/_stubs/prometheus_client/: __init__.py
tests/_stubs/pydantic/: __init__.py
tests/_stubs/pydantic_settings/: __init__.py
tests/_stubs/pytest_asyncio/: __init__.py
tests/_stubs/starlette/: __init__.py  requests.py  responses.py  types.py
tests/_stubs/starlette/middleware/: __init__.py  base.py
tests/_stubs/typer/: __init__.py  testing.py
tests/data/: embedding_pairs.json
tests/data/beir/en/: qrels.tsv
tests/data/miracl/en/: corpus.jsonl  queries.jsonl
tests/data/miracl/es/: corpus.jsonl  queries.jsonl
tests/data/miracl/ja/: corpus.jsonl  queries.jsonl
