[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name            = "ai-memory"
dynamic         = ["version"]
description     = "Self-hosted long-term memory backend built with FastAPI, FAISS and SQLite."
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "Apache-2.0" }
authors         = [
  { name = "Ingver", email = "kayel.20221967@gmail.com" },
]
keywords = [
  "memory", "FAISS", "vector", "FastAPI", "SQLite",
]

# -------------------------------
# Runtime dependencies
# -------------------------------

dependencies = [
  # Web / API
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",

  # Config & validation
  "pydantic>=2.5",
  "pydantic-settings>=2.2",

  # Storage / Vector
  "aiosqlite>=0.19",
  "faiss-cpu>=1.8",
  "qdrant-client>=1.9",

  # Numerical computations
  "numpy>=1.26",
  
  # Security
  "python-multipart>=0.0.9",

  # Observability
  "python-json-logger>=2.0",
  "opentelemetry-api>=1.23",
  "opentelemetry-sdk>=1.23",
  "opentelemetry-instrumentation-fastapi>=0.45b0",

  # HTTP client (used by CLI & tests)
  "httpx>=0.27",
]

# -------------------------------
# Optional feature groups
# -------------------------------

[project.optional-dependencies]
cli = [
  "typer>=0.12",
  "rich>=13.7",
]

security = ["cryptography>=42.0"]
metrics = ["prometheus-client>=0.20"]

dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.21",
  "coverage>=7.5",
  "black>=24.3",
  "bandit>=1.7",

# Extra pytest plugins for benchmarking & coverage reports
  "pytest-benchmark>=4.0",
  "pytest-cov>=4.1",

  # Config parsers for Python <3.11
  "tomli>=2.0; python_version<'3.11'",
  "pyyaml>=6.0",

  # Property-based testing & API fuzzing
  "hypothesis>=6.98",
  "schemathesis>=3.27",
]

[project.scripts]
ai-mem = "memory_system.cli:app"

# -------------------------------
# Setuptools package discovery
# -------------------------------

[tool.setuptools.packages.find]
where   = ["."]
exclude = ["tests*", "examples*", "stubs*"]

[tool.setuptools.dynamic]
version = {attr = "memory_system.__version__"}

# -------------------------------
# Linting / typing configuration
# -------------------------------

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
show_error_codes       = true
exclude                = ["fastapi/.*", "aiosqlite/.*"]
files                  = ["memory_system"]
mypy_path              = ["stubs"]
allow_subclassing_any  = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["fastapi.*", "aiosqlite.*"]
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py312"
required-version = ">=0.12.7,<0.13"
exclude = ["build/*", "build/", "dist/*"]
extend-exclude = [
    ".venv",
    "aiosqlite",
    "cryptography",
    "fastapi",
    "faiss",
    "httpx",
    "hypothesis",
    "numpy",
    "opentelemetry",
    "prometheus_client",
    "pydantic",
    "pydantic_settings",
    "schemathesis",
    "sentence_transformers",
    "starlette",
    "yaml",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "E402",
    "E501",
    "E741",
    "F401",
    "F821",
    "B008",
    "B017",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401", "B017", "F821"]
"*/__init__.py" = ["F401", "E402"]

[tool.black]
line-length = 120
target-version = ["py312"]
extend-exclude = '''
/(\.venv|aiosqlite|cryptography|fastapi|faiss|httpx|hypothesis|numpy|opentelemetry|prometheus_client|pydantic|pydantic_settings|schemathesis|sentence_transformers|starlette|yaml)/
'''
